--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ua.ck.zabochen.sms">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MainApp"
         android:allowBackup="false"
@@ -11,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/ThemeApp">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
